# local-robot

./: .gitattributes  .gitignore  PROJECT_SPEC.md  README.md  config.yaml  main.py  pyproject.toml  run.bat  run_web.bat  web.py
docs/: ARCHITECTURE.md  GEMMA_MIGRATION.md  MODEL_STRATEGY.md  PERSONA.md  PHYSICAL_AI_RESEARCH.md  ROBOT_ARCHITECTURE.md  RUN_LOCAL.md  SETUP_WINDOWS.md  STATUS.md  TESTING.md  WATERWAY_ROBOT_PLAN.md
scripts/: bench_llm.py  check_env.py  check_project.py  compare_ollama_models.py  compare_stt_models.py  pull_stt_model.py  smoke_camera.py  smoke_mic_stt.py  smoke_tts.py  start_voicevox.ps1
src/: agent.py  config.py  webapp.py
src/io/: camera.py  mic.py  speaker.py
src/perception/: simple_vad.py  stt.py  vad.py  wake_word.py
src/reasoning/: base.py  factory.py  gemma.py  llm.py  memory.py  ollama.py
src/robot/: __init__.py  actuator.py  mission.py  planner.py  safety.py  types.py  voice_commands.py
src/speech/: tts.py
src/utils/: encoding.py  logging.py  metrics.py
tests/: test_gemma_backend.py  test_memory_metrics.py  test_ollama_backend.py  test_robot_planner.py  test_wake_word.py
web/: app.js  index.html  styles.css  twin.js
