[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-modal-agent"
version = "0.1.0"
description = "ローカルマルチモーダル対話AIエージェント"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "opencv-python",
    "sounddevice",
    "soundfile",
    "numpy",
    "pillow",
    "pydantic>=2.0",
    "pyyaml",
    "httpx",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

whisper = [
    "faster-whisper>=1.0.0",
]

transformers-gemma = [
    "transformers>=4.55",
    "accelerate",
    "bitsandbytes>=0.43.0",
]

silero = [
    "silero-vad",
]

legacy-qwen = [
    "transformers>=4.55",
    "accelerate",
    "bitsandbytes>=0.43.0",
    "faster-whisper>=1.0.0",
]

[project.scripts]
local-modal-agent = "main:main"
local-robot-web = "src.webapp:main"

[tool.setuptools]
py-modules = ["main", "web"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
